--- a/index.html
+++ b/index.html
@@ -1,12 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Architects Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <main>
+        <!-- navbar start -->
+        <section class="nav-hero-section">
+            <div class="navbar">
+                <div class="logo">
+                    <h1>G3 Architects</h1>
+                </div>
+                <ul class="nav-list">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact us</a></li>
+                    <li><a href="#">Login</a></li>
+                    <li><a href="#">Sign Up</a></li>
+                </ul>
+            </div>
+
+            <!-- navbar Finished -->
+
+            <!-- hero section start -->
+            <div class="hero-section">
+                <div class="hero-text">
+                    <h1>Brand New <br>
+                        Group of Architects
+                    </h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="button-color">Explore More</button>
+                </div>
+                <div class="hero-img">
+                    <img src="images/banner.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- hero section end -->
+
+        <!-- feature section start -->
+        <section class="feature-section">
+            <div class="f-gallary">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="f-text">
+                <h2>Quick list <span class="black-text">of Our</span> <br> <span class="orange-text">Feature</span></h2>
+                <br>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <br>
+                <button class="button-color">Explore More</button>
+            </div>
+        </section>
+        <!-- feature Section end -->
+
+        <!-- experience Seciton Start -->
+        <section class="experience">
+            <div class="ex-text">
+                <div>
+                    <h1 class="ex-text-1">Features you will <br> love & enjoy</h1>
+                    <br>
+                    <p class="ex-para">There are many variations of passages of Lorem Ipsum available, but the majority
+                        have
+                        suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even</p>
+                </div>
+
+                <div class="ex-text-box">
+                    <h3>Desktop & Mobile Version</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="ex-text-box">
+                    <h3>Drag & Drop Builder</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="ex-text-box">
+                    <h3>Awesome Modern Design</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="ex-text-box">
+                    <h3>Super Easy to Edit</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="ex-img">
+                <img src="images/architect.png" alt="">
+            </div>
+
+            <button class="button-color ex-button">10+ Year <br> <small>Experience</small> </button>
+        </section>
+        <!-- experience Seciton End -->
+
+        <!-- Facts Section Start -->
+        <section class="facts-section">
+            <h2>Some Facts</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered
+                alteration.</p>
+            <br> <br><br>
+            <div class="facts-list">
+                <div class="facts">
+                    <img src="images/icons/customers.png" alt="">
+                    <h1>590</h1>
+                    <h3>Clients Worked</h3>
+                </div>
+
+                <div class="facts">
+                    <img src="images/icons/projects.png" alt="">
+                    <h1>1458</h1>
+                    <h3>Projects Finished</h3>
+                </div>
+
+                <div class="facts">
+                    <img src="images/icons/email.png" alt="">
+                    <h1>22578</h1>
+                    <h3>Email Send</h3>
+                </div>
+
+                <div class="facts">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h1>54</h1>
+                    <h3>Awards Winnings</h3>
+                </div>
+            </div>
+        </section>
+        <!-- Facts Section End -->
+
+        <!-- sponspors Start -->
+        <section class="sponspors">
+            <div class="sponspors-text">
+                <h2>Our Sponspors</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered
+                    alteration.</p>
+            </div>
+            <div class="sponspors-img">
+                <img src="images/sponsors/amazon.png" alt=""><img src="images/sponsors/figma.png" alt=""><img
+                    src="images/sponsors/google.png" alt=""><img src="images/sponsors/spotify.png" alt=""><img
+                    src="images/sponsors/telerama.png" alt="">
+            </div>
+        </section>
+        <!-- sponspors End -->
+
+        <!-- form Section start -->
+        <section class="form">
+            <h2>Request Free Consultation</h2>
+            <br>
+            <p>Get in touch and discover how we can help. We aim to be in touch for a consultation</p>
+            <br>
+            <input type="text" placeholder="Enter your Name">
+            <input type="email" placeholder="Enter your email">
+            <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <button class="button-color">Submit</button>
+        </section>
+        <!-- form Section End -->
+
+        <!-- footer start -->
+        <footer>
+            <small>All rights reserved copyright@2023 startup landing page design</small>
+        </footer>
+        <!-- footer end -->
+
+
+    </main>
+
 </body>
+
 </html>
